relize feature 'User can view list answer' and 'User can create answer'

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,2 +1,12 @@
 h1= @question.title
 p= @question.body
+
+= render @question.answers
+
+= render 'shared/errors', resource: @answer
+
+= form_with model: [@question, Answer.new], local: true do |f|
+  = f.label :body
+  = f.text_area :body
+  = f.submit 'Accept'
+
