--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,6 +1,8 @@
 h1= @question.title
 p= @question.body
 
+= link_to 'Delete question', question_path(@question), method: :delete
+
 = render @question.answers
 
 = render 'shared/errors', resource: @answer
