--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,7 +1,8 @@
 h1= @question.title
 p= @question.body
 
-= link_to 'Delete question', question_path(@question), method: :delete
+- if (current_user.present? && current_user.author?(@question))
+  = link_to 'Delete question', question_path(@question), method: :delete
 
 = render @question.answers
 
