--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -8,7 +8,7 @@ p= @question.body
 
 = render 'shared/errors', resource: @answer
 
-= form_with model: [@question, Answer.new], local: true do |f|
+= form_with model: [@question, @answer], local: true do |f|
   = f.label :body
   = f.text_area :body
   = f.submit 'Accept'
