--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,4 +1,14 @@
 p= answer.body
 
-- if answer.id.present? && (current_user.present? && current_user.author?(answer))
-  = link_to 'Delete answer', answer_path(answer), method: :delete
+- if answer.id.present? && (user_signed_in? && current_user.author?(answer))   
+  p= link_to 'Delete answer', answer_path(answer), method: :delete
+
+  p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
+  
+  .edit-errors
+  = form_with model: answer, local: false, class: 'hidden', html: { id: "edit-answer-#{answer.id}" } do |f|
+    p
+      = f.label :body, 'Your Answer'
+      = f.text_area :body
+    p= f.submit 'Save'
+
