--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -4,12 +4,14 @@ p= @question.body
 - if (current_user.present? && current_user.author?(@question))
   = link_to 'Delete question', question_path(@question), method: :delete
 
-= render @question.answers
+.answers 
+  = render @question.answers
 
-= render 'shared/errors', resource: @answer
-
-= form_with model: [@question, @answer], local: true do |f|
-  = f.label :body
-  = f.text_area :body
-  = f.submit 'Accept'
+.answer-errors
+  = render 'shared/errors', resource: @answer
+= form_with model: [@question, @answer], local: false, class: 'new-answer' do |f|
+  p
+    = f.label :body
+    = f.text_area :body
+  p= f.submit 'Accept'
 
