--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,8 +1,6 @@
 p= answer.body
 
 - if answer.id.present? && (user_signed_in? && current_user.author?(answer))   
-  p= link_to 'Delete answer', answer_path(answer), method: :delete
-
   p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
   
   .edit-errors
@@ -11,4 +9,7 @@ p= answer.body
       = f.label :body, 'Your Answer'
       = f.text_area :body
     p= f.submit 'Save'
+
+  p= link_to 'Delete answer', answer_path(answer), method: :delete, remote: true
+
 
