relize feature best answer

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,6 +1,9 @@
+- if answer.best
+  p= 'Best Answer'
 p= answer.body
 
-- if answer.id.present? && (user_signed_in? && current_user.author?(answer))   
+- if answer.id.present? && (user_signed_in? && current_user.author?(answer))
+  p= link_to 'Mark Best', best_answer_path(answer), method: :patch, remote: true 
   p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
   
   .edit-errors
