--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -16,7 +16,7 @@
     p= link_to 'Delete question', question_path(@question), method: :delete
 
 .answers 
-  = render @question.answers
+  = render @answers
 
 .answer-errors
   = render 'shared/errors', resource: @answer
