--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,11 +1,14 @@
 - if answer.best
   p= 'Best Answer'
 p= answer.body
-- if answer.files.attached?
+.answer-files  
+  - if answer.files.attached?
     - answer.files.each do |file|
       p= link_to file.filename.to_s, url_for(file)
+      - if current_user&.author?(answer)
+        p= link_to "Delete file", destroy_file_answer_path(file.signed_id),method: :delete, remote: true
 
-- if answer.persisted? && current_user&.author?(@question)
+- if answer.persisted? && current_user&.author?(answer)
   p= link_to 'Mark Best', best_answer_path(answer), method: :patch, remote: true 
   p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
   
