--- a/app/views/answers/destroy.js.erb
+++ b/app/views/answers/destroy.js.erb
@@ -1,3 +1,3 @@
 <% if !@answer.persisted? %>
-  $('.answers').html('<%= j render @question.answers %>')
+  $('.answers').html('<%= j render @question.answers.sort_by_best %>')
 <% end %>
