--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -7,7 +7,7 @@
       - question.files.each do |file|
         p= link_to file.filename.to_s, url_for(file)
         - if current_user&.author?(question)
-          p= link_to "Delete file", url_for(file.purge)
+          p= link_to "Delete file", attachment_path(file.signed_id), method: :delete, remote: true
 
   - if current_user&.author?(question)
     p= link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id }
