--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -8,6 +8,11 @@
         p= link_to file.filename.to_s, url_for(file)
         - if current_user&.author?(question)
           p= link_to "Delete file", attachment_path(file.id), method: :delete, remote: true
+  .links
+    p Links:
+    ul
+      -question.links.each do |link|
+        li= link_to link.name, link.url
 
   - if current_user&.author?(question)
     p= link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id }
