--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -12,5 +12,16 @@
     p
       = f.label :files
       = f.file_field :files, multiple: true, direct_upload: true
+      
+    p Links:
+    p
+      = f.fields_for :links do |l|
+        p
+          = l.label :name, 'Link_name'
+          = l.text_field :name
+        p
+          = l.label :url, 'link'
+          = l.text_field :url
+
     p= f.submit 'Accept'
 
