--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -13,6 +13,8 @@
     ul
       -question.links.each do |link|
         li= link_to link.name, link.url
+        - if link.gist?
+          = javascript_include_tag link.url + '.js'
         - if current_user&.author?(question)
           p= link_to "Delete link", link_path(link), method: :delete, remote: true
 
