--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -13,6 +13,8 @@ p= answer.body
   ul
     -answer.links.each do |link|
       li= link_to link.name, link.url
+      - if link.gist?
+        = javascript_include_tag link.url + '.js'
       - if current_user&.author?(answer)
           p= link_to "Delete link", link_path(link), method: :delete, remote: true
 
