--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -8,6 +8,15 @@
   p
     = f.label :files
     = f.file_field :files, multiple: true, direct_upload: true
+  h3 Reward:
+  #reward 
+    = f.fields_for :reward do |r|
+      p
+        = r.label :reward_title, 'Reward'
+        = r.text_field :reward_title
+      p
+        = r.label :image, 'Image'
+        = r.text_field :image
 
   h3 Links:
   #links
