--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,7 +1,7 @@
 .question  
   h1= question.title
   p= question.body
-  
+  p= question.reward&.reward_title
   .question-files
     - if question.files.attached?
       - question.files.each do |file|
