--- a/app/views/comments/_comments.html.slim
+++ b/app/views/comments/_comments.html.slim
@@ -1,6 +1,6 @@
-.comments
+.comments id= "#{resource.class}-comments"
   - resource.comments.each do |comment|   
     = render 'comments/comment', comment: comment
   - if current_user
-    p= link_to 'Create comment', '#', class: 'create-comment-link'
+    p= link_to 'Create comment', '#', class: 'create-comment-link', data: { resource_id: resource.id }
     = render 'comments/form', resource: resource
