fix comment and tried install handlebars

--- a/app/views/comments/_comments.html.slim
+++ b/app/views/comments/_comments.html.slim
@@ -1,4 +1,4 @@
-.comments id= "#{resource.class}-comments"
+.comments id= "#{resource.class}-#{resource.id}-comments"
   - resource.comments.each do |comment|   
     = render 'comments/comment', comment: comment
   - if current_user
