--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -7,7 +7,7 @@ p= answer.body
   .answer-files
     - answer.files.each do |file|
       p= link_to file.filename.to_s, url_for(file)
-      - if current_user&.author?(answer)
+      - if can?(:update, answer)
         p= link_to "Delete file", attachment_path(file.id), method: :delete, remote: true
 
 - if answer.links.any?
@@ -18,10 +18,10 @@ p= answer.body
         li= link_to link.name, link.url
         - if link.gist?
           = javascript_include_tag link.url + '.js'
-        - if current_user&.author?(answer)
+        - if can?(:update, answer)
             p= link_to "Delete link", link_path(link), method: :delete, remote: true
 
-- if answer.persisted? && current_user&.author?(answer.question)
+- if can?(:update, answer)
   p= link_to 'Mark Best', best_answer_path(answer), method: :patch, remote: true 
   p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
   
