--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,5 +1,11 @@
 = render 'question_block'
 
+- if @question.subscribed?(current_user)
+  = link_to 'Unsubscribe', unsubscribe_question_path(@question), method: :post, remote: true  
+- else  
+  = link_to 'Subscribe', subscribe_question_path(@question), method: :post, remote: true
+
+
 .answers id= "question-#{@question.id}"
   = render @answers
 
