--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -3,7 +3,7 @@
 .question-subscribe
   - if current_user
     - if @question.subscribed?(current_user)
-      = link_to 'Unsubscribe', question_subscription_path(@question, @subscribe), method: :delete, remote: true
+      = link_to 'Unsubscribe', question_subscription_path(@question, @subscription), method: :delete, remote: true
     - else  
       = link_to 'Subscribe', question_subscriptions_path(@question), method: :post, remote: true
 
