--- a/app/views/shared/_form_search.html.slim
+++ b/app/views/shared/_form_search.html.slim
@@ -1,4 +1,12 @@
 = form_with url: '/search', method: :get do |form|
- = form.label :query, 'Search for:'
- = form.text_field :query
- = form.submit 'Search'
+  
+  p
+  - @types.each do |type|
+    = form.radio_button :type, type
+    = form.label :type, type
+
+  p
+    = form.label :query, 'Search for:'
+    = form.text_field :query
+   
+    p= form.submit 'Search'
