--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,12 +1,13 @@
-= render 'shared/form_search'
+div class='row gx-5 mt-3'
 
-h3 Questions
-.questions-list.collection
-  - if @questions.any?
-    = render @questions
-  - else
-    div
-      .col.s6.offset-s3.center No question found
+  div class='col'
+    h3 Questions
+    .questions-list.collection
+      - if @questions.any?
+        = render @questions
+      - else
+        div
+          .col.s6.offset-s3.center No question found
 
-- if can?(:create, Question)
-  p= link_to 'Ask question', new_question_path
+    - if can?(:create, Question)
+      p= link_to 'Ask question', new_question_path
