--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -1,28 +1,39 @@
-= form_with model: @question, local: false do |f|
-  p 
-    = f.label :title
-    = f.text_field :title
-  p  
-    = f.label :body
-    = f.text_area :body
-  p
-    = f.label :files
-    = f.file_field :files, multiple: true, direct_upload: true
-  h3 Reward:
-  #reward 
-    = f.fields_for :reward do |r|
-      p
-        = r.label :reward_title, 'Reward'
-        = r.text_field :reward_title
-      p
-        = r.label :image, 'Image'
-        = r.text_field :image
+div class='row justify-content-center mt-3'
+  div class='col col-md-4'
+    h2= 'New Question'
+    div class='card border-primary'
+      div class='card-body'
+        = form_with model: @question, local: false do |f|
+          div class='form-group'  
+            .mb-3  
+              = f.label :title, class: 'form-label'
+              = f.text_field :title, class: 'form-control'
+            
+            .mb-3
+              = f.label :body, class: 'form-label'
+              = f.text_area :body, class: 'form-control'
+            
+            .mb-3
+              = f.label :files, class: 'form-label'
+              = f.file_field :files, multiple: true, direct_upload: true, class: 'form-control'
 
-  h3 Links:
-  #links
-    = f.fields_for :links do |link|
-      = render 'shared/link_fields', f: link
-    .links
-      = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields'
+            h4 Reward:
+            #reward 
+              = f.fields_for :reward do |r|
+                .mb-3
+                  = r.label :reward_title, 'Reward', class: 'form-label'
+                  = r.text_field :reward_title, class: 'form-control'
+                .mb-3
+                  = r.label :image, 'Image', class: 'form-label'
+                  = r.text_field :image, class: 'form-control'
 
-  p= f.submit 'Ask'
+            h4 Links:
+            #links
+              = f.fields_for :links do |link|
+                = render 'shared/link_fields', f: link
+              .links
+                .mt-1
+                  link= link_to_add_association 'add link', f, :links, partial: 'shared/link_fields'
+
+            .mb-3
+              = f.submit 'Ask', class: 'btn btn-primary mt-1'
