--- a/app/views/questions/_question_block.html.slim
+++ b/app/views/questions/_question_block.html.slim
@@ -1,51 +1,52 @@
-.question-info#question-info
-  .question
-    .section
-      h5.question-title = @question.title
-      p.question-body = @question.body
-      p.question-reward = @question.reward&.reward_title
-      = render 'shared/vote', resource: @question
-    - if @question.files.attached?
-      .question-files
-        - @question.files.each do |file|
-          p= link_to file.filename.to_s, url_for(file)
-          - if can?(:update, @question)
-            p= link_to "Delete file", attachment_path(file.id), method: :delete, remote: true
-    - if @question.links.any?  
-      .links
-        p Links:
-        ul
-          -@question.links.each do |link|
-            li= link_to link.name, link.url
-            - if link.gist?
-              = javascript_include_tag link.url + '.js'
-            - if can?(:update, @question)
-              p= link_to "Delete link", link_path(link), method: :delete, remote: true
-    .question-comments
-      = render 'comments/comments', resource: @question
-    .question-controls
-      .row
-        - if can?(:update, @question)
-          .col
-            = link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: @question.id }
-            .question-edit-errors
-            = form_with model: @question, class: 'hidden', html: { id: "edit-question-#{@question.id}" }, local: false do |f|
-              p 
-                = f.label :title, 'Your Title'
-                = f.text_field :title
-              p  
-                = f.label :body, 'Your Question'
-                = f.text_area :body
-              p
-                = f.label :files
-                = f.file_field :files, multiple: true, direct_upload: true
+.row
+  div class='col col-md-4'
+    div class='card border-primary'
+      div class='card-body'
+        .question-info#question-info
+          .question
+            h5.card-title = @question.title
+            p.card-text = @question.body
+            p.question-reward = @question.reward&.reward_title
+            = render 'shared/vote', resource: @question
+            - if @question.files.attached?
+              .question-files
+                - @question.files.each do |file|
+                  link= link_to file.filename.to_s, url_for(file)
+                  - if can?(:update, @question)
+                    link= link_to "Delete file", attachment_path(file.id), method: :delete, remote: true
+            - if @question.links.any?  
+              .links
+                p Links:
+                ul
+                  -@question.links.each do |link|
+                    li= link_to link.name, link.url
+                    - if link.gist?
+                      = javascript_include_tag link.url + '.js'
+                    - if can?(:update, @question)
+                      link= link_to "Delete link", link_path(link), method: :delete, remote: true
+            .question-comments
+              = render 'comments/comments', resource: @question
+            .question-controls
+              - if can?(:update, @question)
+                  = link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: @question.id }
+                  .question-edit-errors
+                  = form_with model: @question, class: 'hidden', html: { id: "edit-question-#{@question.id}" }, local: false do |f|
+                    .mb-3 
+                      = f.label :title, 'Your Title', class: 'form-label'
+                      = f.text_field :title, class: 'form-control'
+                    .mb-3  
+                      = f.label :body, 'Your Question', class: 'form-label'
+                      = f.text_area :body
+                    .mb-3
+                      = f.label :files, class: 'form-label'
+                      = f.file_field :files, multiple: true, direct_upload: true, class: 'form-control'
 
-              h3 Links:
-              #links
-                .links
-                  = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields'
+                    h5 Links:
+                    #links
+                      .links
+                        = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields'
 
-              p= f.submit 'Save'
-          .col
-            = link_to 'Delete question', question_path(@question), method: :delete
+                    = f.submit 'Save', class: 'btn btn-primary mt-1'
+                  
+                  = link_to 'Delete question', question_path(@question), method: :delete
 
