--- a/app/views/shared/_form_search.html.slim
+++ b/app/views/shared/_form_search.html.slim
@@ -1,12 +1,11 @@
-= form_with url: '/search', method: :get do |form|
-  
-  p
+= form_with url: '/search', method: :get, class: 'd-flex' do |form|
+    
   - @types.each do |type|
-    = form.radio_button :type, type
-    = form.label :type, type
+    div class='form-check form-check-inline'
+      = form.radio_button :type, type, class: 'form-check-input'
+      = form.label :type, type, class: 'form-check-label'
 
-  p
-    = form.label :query, 'Search for:'
-    = form.text_field :query
+  div class='mb-3'
+    = form.text_field :query, class: 'form-control me-2', aria_label: 'Search', placeholder: 'Search:'
    
-    p= form.submit 'Search'
+  = form.submit 'Search', class: 'btn btn-outline-success'
