--- a/app/views/shared/_link_fields.html.slim
+++ b/app/views/shared/_link_fields.html.slim
@@ -1,9 +1,9 @@
 .nested-fields
-  p
-    = f.label :name, 'Link_name'
-    = f.text_field :name
-  p
-    = f.label :url, 'link'
-    = f.text_field :url
+  .mb-3
+    = f.label :name, 'Link_name', class: 'form-label'
+    = f.text_field :name, class: 'form-control'
+  .mb-3
+    = f.label :url, 'link', class: 'form-label'
+    = f.text_field :url, class: 'form-control'
 
-  = link_to_remove_association "remove link", f
+  link= link_to_remove_association "remove link", f
