--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,56 +1,57 @@
-.col.col-md-4'
-      .card.border-primary'
-        .card-body
-          - if answer.best
-            p= 'Best Answer'
-          p= answer.body
-          = render 'shared/vote', resource: answer
+- cache answer do  
+  .col.col-md-4
+    .card.border-primary
+      .card-body
+        - if answer.best
+          p= 'Best Answer'
+        p= answer.body
+        = render 'shared/vote', resource: answer
 
-          - if answer.files.attached?
-            .answer-files
-              - answer.files.each do |file|
-                link= link_to file.filename.to_s, url_for(file)
+        - if answer.files.attached?
+          .answer-files
+            - answer.files.each do |file|
+              link= link_to file.filename.to_s, url_for(file)
+              - if can?(:update, answer)
+                link= link_to "Delete file", attachment_path(file.id), method: :delete, remote: true
+
+        - if answer.links.any?
+          .links
+            p Links:
+            ul
+              -answer.links.each do |link|
+                li= link_to link.name, link.url
+                - if link.gist?
+                  = javascript_include_tag link.url + '.js'
                 - if can?(:update, answer)
-                  link= link_to "Delete file", attachment_path(file.id), method: :delete, remote: true
+                    link= link_to "Delete link", link_path(link), method: :delete, remote: true
 
-          - if answer.links.any?
-            .links
-              p Links:
-              ul
-                -answer.links.each do |link|
-                  li= link_to link.name, link.url
-                  - if link.gist?
-                    = javascript_include_tag link.url + '.js'
-                  - if can?(:update, answer)
-                      link= link_to "Delete link", link_path(link), method: :delete, remote: true
+        - if can?(:update, answer)
+          link= link_to 'Mark Best', best_answer_path(answer), method: :patch, remote: true 
+          p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
+          
+          .edit-errors
+          = form_with model: answer, local: false, class: 'hidden', html: { id: "edit-answer-#{answer.id}" } do |f|
+            .mb-3
+              = f.label :body, class: 'form-label'
+              = f.text_area :body, class: 'form-control'
+            .mb-3
+              = f.label :files, class: 'form-label'
+              = f.file_field :files, multiple: true, direct_upload: true, class: 'form-control'
+              
+            h3 Links:
+            #links
+              = f.fields_for :links do |link|
+                  = render 'shared/link_fields', f: link
+              .links
+                = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields'
 
-          - if can?(:update, answer)
-            link= link_to 'Mark Best', best_answer_path(answer), method: :patch, remote: true 
-            p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
-            
-            .edit-errors
-            = form_with model: answer, local: false, class: 'hidden', html: { id: "edit-answer-#{answer.id}" } do |f|
-              .mb-3
-                = f.label :body, class: 'form-label'
-                = f.text_area :body, class: 'form-control'
-              .mb-3
-                = f.label :files, class: 'form-label'
-                = f.file_field :files, multiple: true, direct_upload: true, class: 'form-control'
-                
-              h3 Links:
-              #links
-                = f.fields_for :links do |link|
-                    = render 'shared/link_fields', f: link
-                .links
-                  = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields'
-
-              = f.submit 'Accept', class: 'btn btn-primary mt-1'
+            = f.submit 'Accept', class: 'btn btn-primary mt-1'
 
 
-            p= link_to 'Delete answer', answer_path(answer), method: :delete, remote: true
+          p= link_to 'Delete answer', answer_path(answer), method: :delete, remote: true
 
-            
-          .answer-comments
-            = render 'comments/comments', resource: answer
+          
+        .answer-comments
+          = render 'comments/comments', resource: answer
 
 
