--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,3 +1,4 @@
-.comment
-  p= comment.user&.email
-  p= comment.body
+- cache comment do  
+  .comment
+    p= comment.user&.email
+    p= comment.body
